# xiaozhi-esp32-server

./: .cursorignore  .gitignore  PROJECT_STRUCTURE.md
main/xiaozhi-server/: app.py  config.yaml  mcp_server_settings.json  monitor.py  pyproject.toml  reconstruction.md  requirements.txt  test.py  tmp.txt
main/xiaozhi-server/config/: logger.py  private_config.py
main/xiaozhi-server/core/: auth.py  connection.py  connection_handler.py  plan.md  reconstruction.md  refract_context.md  routing.py  websocket_server.py
main/xiaozhi-server/core/channels/: interface.py  websocket.py
main/xiaozhi-server/core/connection/: manager.py  state.py  tasks.py
main/xiaozhi-server/core/handle/: abortHandler.py  bak_textHandler.py  functionHandler.py  helloHandler.py  intentHandler.py  iotHandler.py  receiveAudioHandler.py  sendAudioHandler.py  textHandler.py
main/xiaozhi-server/core/mcp/: MCPClient.py  manager.py
main/xiaozhi-server/core/message_handlers/: audio.py  base.py  context.py  messages.py  router.py  text.py
main/xiaozhi-server/core/providers/asr/: fun_docker.py  fun_local.py  (+2 more)
main/xiaozhi-server/core/utils/: dialogue.py  memory.py
main/xiaozhi-server/mermaid/: classgraph.mmd  threads.mmd  threads_update.mmd  threads_update_classgraph.mmd
main/xiaozhi-server/plugins_func/: register.py
main/xiaozhi-server/plugins_func/functions/: handle_device.py  play_music.py
main/xiaozhi-server/test/: test_page.html
main/xiaozhi-server/test/abbreviated_version/: app.js
main/xiaozhi-server/test_scripts/: funasr_docker_with_args.py  funasr_docker_with_py.py
(+38 files in other folders)
