[tool.poetry]
name = "javus-server"  # 将 "your-project-name" 替换为您的项目名称
version = "0.1.0"          # 您的项目版本
description = "根据xiaozhi-server优化调整的版本" # 您的项目描述
authors = ["AutomanStd <514026307@qq.com>"] # 您的姓名和邮箱
license = "MIT"            # 您的项目许可证（根据需要修改）
readme = "README.md"       # 如果有 README 文件

[tool.poetry.dependencies]
python = "^3.11" 

pyyml = "==0.0.2"
torch = "==2.2.2"
silero_vad = "==5.1.2"
websockets = "==14.2"
opuslib_next = "==1.1.2"
numpy = "==1.26.4"
pydub = "==0.25.1"
funasr = "==1.2.3"
torchaudio = "==2.2.2"
openai = "==1.61.0"
google-generativeai = "==0.8.4"
edge_tts = "==7.0.0"
httpx = "==0.27.2"
aiohttp = "==3.9.3"
aiohttp_cors = "==0.7.0"
ormsgpack = "==1.7.0"
ruamel-yaml = "==0.18.10"  # Poetry 使用的是带连字符的包名
loguru = "==0.7.3"
requests = "==2.32.3"
cozepy = "==0.12.0"
mem0ai = "==0.1.62"
bs4 = "==0.0.2"
modelscope = "==1.23.2"
sherpa-onnx = "==1.11.0"
mcp = "==1.4.1"
cnlunar = "==0.2.0"
PySocks = "==1.7.1"
psutil = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
